-- =============================================
-- CAPAS ACADÉMICO - Script Completo de BD
-- Ejecutar en SQL Server Management Studio
-- =============================================

USE master
GO

IF NOT EXISTS (SELECT name FROM sys.databases WHERE name = 'BDCAPAS')
BEGIN
    CREATE DATABASE BDCAPAS
END
GO

USE BDCAPAS
GO

-- =============================================
-- TABLAS
-- =============================================

-- USUARIO
IF NOT EXISTS (SELECT * FROM sysobjects WHERE name='USUARIO' AND xtype='U')
CREATE TABLE USUARIO (
    ID        INT IDENTITY(1,1) PRIMARY KEY,
    USUARIO   VARCHAR(50)    NOT NULL UNIQUE,
    PASS      VARCHAR(64)    NOT NULL,
    DIRECCION VARBINARY(256) NULL
)
GO

-- Si la tabla ya existía sin DIRECCION, la agrega
IF NOT EXISTS (SELECT 1 FROM sys.columns WHERE object_id=OBJECT_ID('USUARIO') AND name='DIRECCION')
    ALTER TABLE USUARIO ADD DIRECCION VARBINARY(256) NULL
GO

-- BITACORA
IF NOT EXISTS (SELECT * FROM sysobjects WHERE name='BITACORA' AND xtype='U')
CREATE TABLE BITACORA (
    ID      INT IDENTITY(1,1) PRIMARY KEY,
    USUARIO VARCHAR(50)  NOT NULL,
    ACCION  VARCHAR(100) NOT NULL,
    FECHA   DATETIME     NOT NULL DEFAULT GETDATE()
)
GO

-- MATERIA
IF NOT EXISTS (SELECT * FROM sysobjects WHERE name='MATERIA' AND xtype='U')
CREATE TABLE MATERIA (
    ID        INT IDENTITY(1,1) PRIMARY KEY,
    NOMBRE    VARCHAR(100) NOT NULL,
    CODIGO    VARCHAR(20)  NOT NULL UNIQUE,
    MODALIDAD VARCHAR(20)  NOT NULL DEFAULT 'Presencial',
    PESO      INT          NOT NULL DEFAULT 3,
    ACTIVA    BIT          NOT NULL DEFAULT 1
)
GO

-- CORRELATIVA
IF NOT EXISTS (SELECT * FROM sysobjects WHERE name='CORRELATIVA' AND xtype='U')
CREATE TABLE CORRELATIVA (
    ID_MATERIA     INT NOT NULL REFERENCES MATERIA(ID),
    ID_CORRELATIVA INT NOT NULL REFERENCES MATERIA(ID),
    PRIMARY KEY (ID_MATERIA, ID_CORRELATIVA)
)
GO

-- ALUMNO_MATERIA (con todas las columnas nuevas de notas)
IF NOT EXISTS (SELECT * FROM sysobjects WHERE name='ALUMNO_MATERIA' AND xtype='U')
CREATE TABLE ALUMNO_MATERIA (
    ID                  INT IDENTITY(1,1) PRIMARY KEY,
    ID_USUARIO          INT NOT NULL REFERENCES USUARIO(ID),
    ID_MATERIA          INT NOT NULL REFERENCES MATERIA(ID),
    ESTADO              VARCHAR(30)    NOT NULL DEFAULT 'Cursando',
    NOTA_PARCIAL1       DECIMAL(4,2)   NULL,
    NOTA_PARCIAL2       DECIMAL(4,2)   NULL,
    NOTA_RECUPERATORIO  DECIMAL(4,2)   NULL,
    NOTA_FINAL          DECIMAL(4,2)   NULL,
    FECHA_FINAL         DATETIME       NULL,
    FECHA_RECUPERATORIO DATETIME       NULL,
    DVH                 INT            NULL,
    UNIQUE(ID_USUARIO, ID_MATERIA)
)
GO

-- Si la tabla ya existía con columnas viejas, agregar las nuevas
IF EXISTS (SELECT 1 FROM sys.columns WHERE object_id=OBJECT_ID('ALUMNO_MATERIA') AND name='NOTA_PARCIAL')
    ALTER TABLE ALUMNO_MATERIA DROP COLUMN NOTA_PARCIAL
GO
IF NOT EXISTS (SELECT 1 FROM sys.columns WHERE object_id=OBJECT_ID('ALUMNO_MATERIA') AND name='NOTA_PARCIAL1')
    ALTER TABLE ALUMNO_MATERIA ADD NOTA_PARCIAL1 DECIMAL(4,2) NULL
GO
IF NOT EXISTS (SELECT 1 FROM sys.columns WHERE object_id=OBJECT_ID('ALUMNO_MATERIA') AND name='NOTA_PARCIAL2')
    ALTER TABLE ALUMNO_MATERIA ADD NOTA_PARCIAL2 DECIMAL(4,2) NULL
GO
IF NOT EXISTS (SELECT 1 FROM sys.columns WHERE object_id=OBJECT_ID('ALUMNO_MATERIA') AND name='NOTA_RECUPERATORIO')
    ALTER TABLE ALUMNO_MATERIA ADD NOTA_RECUPERATORIO DECIMAL(4,2) NULL
GO
IF NOT EXISTS (SELECT 1 FROM sys.columns WHERE object_id=OBJECT_ID('ALUMNO_MATERIA') AND name='NOTA_FINAL')
    ALTER TABLE ALUMNO_MATERIA ADD NOTA_FINAL DECIMAL(4,2) NULL
GO
IF NOT EXISTS (SELECT 1 FROM sys.columns WHERE object_id=OBJECT_ID('ALUMNO_MATERIA') AND name='FECHA_FINAL')
    ALTER TABLE ALUMNO_MATERIA ADD FECHA_FINAL DATETIME NULL
GO
IF NOT EXISTS (SELECT 1 FROM sys.columns WHERE object_id=OBJECT_ID('ALUMNO_MATERIA') AND name='FECHA_RECUPERATORIO')
    ALTER TABLE ALUMNO_MATERIA ADD FECHA_RECUPERATORIO DATETIME NULL
GO

-- EVENTO_ACADEMICO
IF NOT EXISTS (SELECT * FROM sysobjects WHERE name='EVENTO_ACADEMICO' AND xtype='U')
CREATE TABLE EVENTO_ACADEMICO (
    ID          INT IDENTITY(1,1) PRIMARY KEY,
    ID_MATERIA  INT NOT NULL REFERENCES MATERIA(ID),
    ID_USUARIO  INT NOT NULL REFERENCES USUARIO(ID),
    TIPO        VARCHAR(30)  NOT NULL,
    DESCRIPCION VARCHAR(200) NULL,
    FECHA       DATETIME     NOT NULL,
    PESO        INT          NOT NULL DEFAULT 3
)
GO

-- DVV_NOTAS
IF NOT EXISTS (SELECT * FROM sysobjects WHERE name='DVV_NOTAS' AND xtype='U')
CREATE TABLE DVV_NOTAS (
    ID_USUARIO INT      NOT NULL REFERENCES USUARIO(ID) PRIMARY KEY,
    DVV        INT      NOT NULL,
    FECHA      DATETIME NOT NULL DEFAULT GETDATE()
)
GO

-- =============================================
-- STORED PROCEDURES - USUARIO
-- =============================================

IF OBJECT_ID('USUARIO_LOGIN','P') IS NOT NULL DROP PROCEDURE USUARIO_LOGIN
GO
CREATE PROCEDURE USUARIO_LOGIN
    @usuario VARCHAR(50),
    @pass    VARCHAR(64)
AS
BEGIN
    SELECT ID, USUARIO, DIRECCION
    FROM USUARIO
    WHERE USUARIO = @usuario AND PASS = @pass
END
GO

IF OBJECT_ID('USUARIO_CAMBIAR_PASS','P') IS NOT NULL DROP PROCEDURE USUARIO_CAMBIAR_PASS
GO
CREATE PROCEDURE USUARIO_CAMBIAR_PASS
    @usuario VARCHAR(50),
    @pass    VARCHAR(64)
AS
BEGIN
    UPDATE USUARIO SET PASS = @pass WHERE USUARIO = @usuario
END
GO

IF OBJECT_ID('USUARIO_OBTENER','P') IS NOT NULL DROP PROCEDURE USUARIO_OBTENER
GO
CREATE PROCEDURE USUARIO_OBTENER
    @usuario VARCHAR(50)
AS
BEGIN
    SELECT ID, USUARIO, DIRECCION FROM USUARIO WHERE USUARIO = @usuario
END
GO

IF OBJECT_ID('USUARIO_ACTUALIZAR_DIRECCION','P') IS NOT NULL DROP PROCEDURE USUARIO_ACTUALIZAR_DIRECCION
GO
CREATE PROCEDURE USUARIO_ACTUALIZAR_DIRECCION
    @usuario   VARCHAR(50),
    @direccion VARBINARY(256)
AS
BEGIN
    UPDATE USUARIO SET DIRECCION = @direccion WHERE USUARIO = @usuario
END
GO

-- =============================================
-- STORED PROCEDURES - BITACORA
-- =============================================

IF OBJECT_ID('BITACORA_INSERTAR','P') IS NOT NULL DROP PROCEDURE BITACORA_INSERTAR
GO
CREATE PROCEDURE BITACORA_INSERTAR
    @usuario VARCHAR(50),
    @accion  VARCHAR(100)
AS
BEGIN
    INSERT INTO BITACORA (USUARIO, ACCION, FECHA) VALUES (@usuario, @accion, GETDATE())
END
GO

IF OBJECT_ID('BITACORA_LISTAR','P') IS NOT NULL DROP PROCEDURE BITACORA_LISTAR
GO
CREATE PROCEDURE BITACORA_LISTAR
AS
BEGIN
    SELECT ID, USUARIO, ACCION, FECHA FROM BITACORA ORDER BY FECHA DESC
END
GO

-- =============================================
-- STORED PROCEDURES - MATERIA
-- =============================================

IF OBJECT_ID('MATERIA_INSERTAR','P') IS NOT NULL DROP PROCEDURE MATERIA_INSERTAR
GO
CREATE PROCEDURE MATERIA_INSERTAR
    @nombre    VARCHAR(100),
    @codigo    VARCHAR(20),
    @modalidad VARCHAR(20),
    @peso      INT
AS
BEGIN
    INSERT INTO MATERIA (NOMBRE, CODIGO, MODALIDAD, PESO) VALUES (@nombre, @codigo, @modalidad, @peso)
    SELECT SCOPE_IDENTITY() AS ID
END
GO

IF OBJECT_ID('MATERIA_ACTUALIZAR','P') IS NOT NULL DROP PROCEDURE MATERIA_ACTUALIZAR
GO
CREATE PROCEDURE MATERIA_ACTUALIZAR
    @id        INT,
    @nombre    VARCHAR(100),
    @codigo    VARCHAR(20),
    @modalidad VARCHAR(20),
    @peso      INT
AS
BEGIN
    UPDATE MATERIA SET NOMBRE=@nombre, CODIGO=@codigo, MODALIDAD=@modalidad, PESO=@peso WHERE ID=@id
END
GO

IF OBJECT_ID('MATERIA_ELIMINAR','P') IS NOT NULL DROP PROCEDURE MATERIA_ELIMINAR
GO
CREATE PROCEDURE MATERIA_ELIMINAR
    @id INT
AS
BEGIN
    UPDATE MATERIA SET ACTIVA=0 WHERE ID=@id
END
GO

IF OBJECT_ID('MATERIA_LISTAR','P') IS NOT NULL DROP PROCEDURE MATERIA_LISTAR
GO
CREATE PROCEDURE MATERIA_LISTAR
AS
BEGIN
    SELECT ID, NOMBRE, CODIGO, MODALIDAD, PESO FROM MATERIA WHERE ACTIVA=1
END
GO

IF OBJECT_ID('MATERIA_OBTENER','P') IS NOT NULL DROP PROCEDURE MATERIA_OBTENER
GO
CREATE PROCEDURE MATERIA_OBTENER
    @id INT
AS
BEGIN
    SELECT ID, NOMBRE, CODIGO, MODALIDAD, PESO FROM MATERIA WHERE ID=@id AND ACTIVA=1
END
GO

-- =============================================
-- STORED PROCEDURES - CORRELATIVAS
-- =============================================

IF OBJECT_ID('CORRELATIVA_INSERTAR','P') IS NOT NULL DROP PROCEDURE CORRELATIVA_INSERTAR
GO
CREATE PROCEDURE CORRELATIVA_INSERTAR
    @id_materia     INT,
    @id_correlativa INT
AS
BEGIN
    IF NOT EXISTS (SELECT 1 FROM CORRELATIVA WHERE ID_MATERIA=@id_materia AND ID_CORRELATIVA=@id_correlativa)
        INSERT INTO CORRELATIVA VALUES (@id_materia, @id_correlativa)
END
GO

IF OBJECT_ID('CORRELATIVA_ELIMINAR','P') IS NOT NULL DROP PROCEDURE CORRELATIVA_ELIMINAR
GO
CREATE PROCEDURE CORRELATIVA_ELIMINAR
    @id_materia     INT,
    @id_correlativa INT
AS
BEGIN
    DELETE FROM CORRELATIVA WHERE ID_MATERIA=@id_materia AND ID_CORRELATIVA=@id_correlativa
END
GO

IF OBJECT_ID('CORRELATIVA_LISTAR','P') IS NOT NULL DROP PROCEDURE CORRELATIVA_LISTAR
GO
CREATE PROCEDURE CORRELATIVA_LISTAR
    @id_materia INT
AS
BEGIN
    SELECT m.ID, m.NOMBRE, m.CODIGO
    FROM CORRELATIVA c
    JOIN MATERIA m ON m.ID=c.ID_CORRELATIVA
    WHERE c.ID_MATERIA=@id_materia AND m.ACTIVA=1
END
GO

-- =============================================
-- STORED PROCEDURES - ALUMNO_MATERIA
-- =============================================

IF OBJECT_ID('ALUMNO_MATERIA_INSERTAR','P') IS NOT NULL DROP PROCEDURE ALUMNO_MATERIA_INSERTAR
GO
CREATE PROCEDURE ALUMNO_MATERIA_INSERTAR
    @id_usuario INT,
    @id_materia INT,
    @estado     VARCHAR(30)
AS
BEGIN
    INSERT INTO ALUMNO_MATERIA (ID_USUARIO, ID_MATERIA, ESTADO) VALUES (@id_usuario, @id_materia, @estado)
END
GO

IF OBJECT_ID('ALUMNO_MATERIA_ACTUALIZAR','P') IS NOT NULL DROP PROCEDURE ALUMNO_MATERIA_ACTUALIZAR
GO
CREATE PROCEDURE ALUMNO_MATERIA_ACTUALIZAR
    @id                  INT,
    @estado              VARCHAR(30),
    @nota_parcial1       DECIMAL(4,2),
    @nota_parcial2       DECIMAL(4,2),
    @nota_recuperatorio  DECIMAL(4,2),
    @nota_final          DECIMAL(4,2),
    @fecha_final         DATETIME,
    @fecha_recuperatorio DATETIME,
    @dvh                 INT
AS
BEGIN
    UPDATE ALUMNO_MATERIA
    SET ESTADO=@estado,
        NOTA_PARCIAL1=@nota_parcial1,
        NOTA_PARCIAL2=@nota_parcial2,
        NOTA_RECUPERATORIO=@nota_recuperatorio,
        NOTA_FINAL=@nota_final,
        FECHA_FINAL=@fecha_final,
        FECHA_RECUPERATORIO=@fecha_recuperatorio,
        DVH=@dvh
    WHERE ID=@id
END
GO

IF OBJECT_ID('ALUMNO_MATERIA_LISTAR','P') IS NOT NULL DROP PROCEDURE ALUMNO_MATERIA_LISTAR
GO
CREATE PROCEDURE ALUMNO_MATERIA_LISTAR
    @id_usuario INT
AS
BEGIN
    SELECT am.ID, am.ID_MATERIA, m.NOMBRE, m.CODIGO, m.MODALIDAD, m.PESO,
           am.ESTADO,
           am.NOTA_PARCIAL1, am.NOTA_PARCIAL2,
           am.NOTA_RECUPERATORIO, am.NOTA_FINAL,
           am.FECHA_FINAL, am.FECHA_RECUPERATORIO,
           am.DVH
    FROM ALUMNO_MATERIA am
    JOIN MATERIA m ON m.ID=am.ID_MATERIA
    WHERE am.ID_USUARIO=@id_usuario AND m.ACTIVA=1
END
GO

-- =============================================
-- STORED PROCEDURES - EVENTOS
-- =============================================

IF OBJECT_ID('EVENTO_INSERTAR','P') IS NOT NULL DROP PROCEDURE EVENTO_INSERTAR
GO
CREATE PROCEDURE EVENTO_INSERTAR
    @id_materia  INT,
    @id_usuario  INT,
    @tipo        VARCHAR(30),
    @descripcion VARCHAR(200),
    @fecha       DATETIME,
    @peso        INT
AS
BEGIN
    INSERT INTO EVENTO_ACADEMICO (ID_MATERIA, ID_USUARIO, TIPO, DESCRIPCION, FECHA, PESO)
    VALUES (@id_materia, @id_usuario, @tipo, @descripcion, @fecha, @peso)
END
GO

IF OBJECT_ID('EVENTO_ACTUALIZAR','P') IS NOT NULL DROP PROCEDURE EVENTO_ACTUALIZAR
GO
CREATE PROCEDURE EVENTO_ACTUALIZAR
    @id          INT,
    @tipo        VARCHAR(30),
    @descripcion VARCHAR(200),
    @fecha       DATETIME,
    @peso        INT
AS
BEGIN
    UPDATE EVENTO_ACADEMICO SET TIPO=@tipo, DESCRIPCION=@descripcion, FECHA=@fecha, PESO=@peso WHERE ID=@id
END
GO

IF OBJECT_ID('EVENTO_ELIMINAR','P') IS NOT NULL DROP PROCEDURE EVENTO_ELIMINAR
GO
CREATE PROCEDURE EVENTO_ELIMINAR
    @id INT
AS
BEGIN
    DELETE FROM EVENTO_ACADEMICO WHERE ID=@id
END
GO

IF OBJECT_ID('EVENTO_LISTAR_USUARIO','P') IS NOT NULL DROP PROCEDURE EVENTO_LISTAR_USUARIO
GO
CREATE PROCEDURE EVENTO_LISTAR_USUARIO
    @id_usuario INT
AS
BEGIN
    SELECT e.ID, e.ID_MATERIA, m.NOMBRE AS MATERIA, e.TIPO, e.DESCRIPCION, e.FECHA, e.PESO
    FROM EVENTO_ACADEMICO e
    JOIN MATERIA m ON m.ID=e.ID_MATERIA
    WHERE e.ID_USUARIO=@id_usuario
    ORDER BY e.FECHA
END
GO

IF OBJECT_ID('EVENTO_LISTAR_MES','P') IS NOT NULL DROP PROCEDURE EVENTO_LISTAR_MES
GO
CREATE PROCEDURE EVENTO_LISTAR_MES
    @id_usuario INT,
    @anio       INT,
    @mes        INT
AS
BEGIN
    SELECT e.ID, e.ID_MATERIA, m.NOMBRE AS MATERIA, e.TIPO, e.DESCRIPCION, e.FECHA, e.PESO
    FROM EVENTO_ACADEMICO e
    JOIN MATERIA m ON m.ID=e.ID_MATERIA
    WHERE e.ID_USUARIO=@id_usuario
      AND YEAR(e.FECHA)=@anio
      AND MONTH(e.FECHA)=@mes
    ORDER BY e.FECHA
END
GO

-- =============================================
-- STORED PROCEDURES - DVV
-- =============================================

IF OBJECT_ID('DVV_GUARDAR','P') IS NOT NULL DROP PROCEDURE DVV_GUARDAR
GO
CREATE PROCEDURE DVV_GUARDAR
    @id_usuario INT,
    @dvv        INT
AS
BEGIN
    IF EXISTS (SELECT 1 FROM DVV_NOTAS WHERE ID_USUARIO=@id_usuario)
        UPDATE DVV_NOTAS SET DVV=@dvv, FECHA=GETDATE() WHERE ID_USUARIO=@id_usuario
    ELSE
        INSERT INTO DVV_NOTAS VALUES (@id_usuario, @dvv, GETDATE())
END
GO

IF OBJECT_ID('DVV_OBTENER','P') IS NOT NULL DROP PROCEDURE DVV_OBTENER
GO
CREATE PROCEDURE DVV_OBTENER
    @id_usuario INT
AS
BEGIN
    SELECT DVV FROM DVV_NOTAS WHERE ID_USUARIO=@id_usuario
END
GO

-- =============================================
-- DATOS INICIALES
-- =============================================

-- Usuario admin con password "Admin123"
-- SHA256 de "Admin123" = a665a45920422f9d417e4867efdc4fb8a04a1f3fff1fa07e998e86f7f7a27ae3
IF NOT EXISTS (SELECT 1 FROM USUARIO WHERE USUARIO='admin')
    INSERT INTO USUARIO (USUARIO, PASS)
    VALUES ('admin', 'a665a45920422f9d417e4867efdc4fb8a04a1f3fff1fa07e998e86f7f7a27ae3')
GO

-- Materias de ejemplo
IF NOT EXISTS (SELECT 1 FROM MATERIA WHERE CODIGO='PROG1')
BEGIN
    INSERT INTO MATERIA (NOMBRE, CODIGO, MODALIDAD, PESO) VALUES
        ('Programacion 1',         'PROG1',  'Presencial', 3),
        ('Programacion 2',         'PROG2',  'Presencial', 4),
        ('Base de Datos 1',        'BD1',    'Presencial', 3),
        ('Base de Datos 2',        'BD2',    'Virtual',    4),
        ('Matematica 1',           'MAT1',   'Presencial', 3),
        ('Matematica 2',           'MAT2',   'Presencial', 4),
        ('Sistemas Operativos',    'SO',     'Virtual',    3),
        ('Redes',                  'REDES',  'Presencial', 3),
        ('Ingenieria de Software', 'IS',     'Virtual',    5)

    -- Correlativas
    INSERT INTO CORRELATIVA VALUES
        ((SELECT ID FROM MATERIA WHERE CODIGO='PROG2'), (SELECT ID FROM MATERIA WHERE CODIGO='PROG1')),
        ((SELECT ID FROM MATERIA WHERE CODIGO='BD1'),   (SELECT ID FROM MATERIA WHERE CODIGO='PROG1')),
        ((SELECT ID FROM MATERIA WHERE CODIGO='BD2'),   (SELECT ID FROM MATERIA WHERE CODIGO='BD1')),
        ((SELECT ID FROM MATERIA WHERE CODIGO='MAT2'),  (SELECT ID FROM MATERIA WHERE CODIGO='MAT1')),
        ((SELECT ID FROM MATERIA WHERE CODIGO='IS'),    (SELECT ID FROM MATERIA WHERE CODIGO='PROG2')),
        ((SELECT ID FROM MATERIA WHERE CODIGO='IS'),    (SELECT ID FROM MATERIA WHERE CODIGO='BD1'))
END
GO

PRINT '✔ Base de datos BDCAPAS creada y configurada correctamente.'
PRINT 'Usuario: admin | Contraseña: Admin123'
GO
