@startuml DER
top to bottom direction
skinparam entityAttributeIconSize 0
skinparam classFontSize 10
skinparam packageFontSize 11
skinparam shadowing false
skinparam linetype ortho
skinparam ranksep 60
skinparam nodesep 40

' ============================================================
' TABLAS
' ============================================================

entity "USUARIO" as USUARIO {
  *ID : INT <<PK, IDENTITY>>
  --
  *USUARIO : VARCHAR(50) <<UQ>>
  *PASS : VARCHAR(64)
  DIRECCION : VARBINARY(256)
  *ROL : VARCHAR(10)
  *DVH : INT
  *INTENTOS_FALLIDOS : INT
  *BLOQUEADO : BIT
}

entity "BITACORA" as BITACORA {
  *ID : INT <<PK, IDENTITY>>
  --
  *USUARIO : VARCHAR(50)
  *ACCION : VARCHAR(100)
  *FECHA : DATETIME
  *DVH : INT
  *CRITICIDAD : VARCHAR(10)
}

entity "MATERIA" as MATERIA {
  *ID : INT <<PK, IDENTITY>>
  --
  *NOMBRE : VARCHAR(100)
  *CODIGO : VARCHAR(20) <<UQ>>
  *MODALIDAD : VARCHAR(20)
  *PESO : INT
  *ACTIVA : BIT
  *DVH : INT
}

entity "CORRELATIVA" as CORRELATIVA {
  *ID_MATERIA : INT <<PK, FK>>
  *ID_CORRELATIVA : INT <<PK, FK>>
  --
  ID : INT <<IDENTITY>>
  *DVH : INT
}

entity "ALUMNO_MATERIA" as ALUMNO_MATERIA {
  *ID : INT <<PK, IDENTITY>>
  --
  *ID_USUARIO : INT <<FK>>
  *ID_MATERIA : INT <<FK>>
  *ESTADO : VARCHAR(30)
  NOTA_PARCIAL1 : DECIMAL(4,2)
  NOTA_PARCIAL2 : DECIMAL(4,2)
  NOTA_RECUPERATORIO : DECIMAL(4,2)
  NOTA_FINAL : DECIMAL(4,2)
  FECHA_FINAL : DATETIME
  FECHA_RECUPERATORIO : DATETIME
  *DVH : INT
}

entity "EVENTO_ACADEMICO" as EVENTO_ACADEMICO {
  *ID : INT <<PK, IDENTITY>>
  --
  *ID_MATERIA : INT <<FK>>
  *ID_USUARIO : INT <<FK>>
  *TIPO : VARCHAR(30)
  DESCRIPCION : VARCHAR(200)
  *FECHA : DATETIME
  *PESO : INT
  *DVH : INT
}

entity "PERIODO_ACADEMICO" as PERIODO_ACADEMICO {
  *ID : INT <<PK, IDENTITY>>
  --
  *ANIO : INT
  *CUATRIMESTRE : INT <<UQ con ANIO>>
  DESCRIPCION : VARCHAR(100)
  FECHA_INICIO : DATE
  FECHA_FIN : DATE
  *DVH : INT
}

entity "INSCRIPCION" as INSCRIPCION {
  *ID : INT <<PK, IDENTITY>>
  --
  *ID_USUARIO : INT <<FK>>
  *ID_PERIODO : INT <<FK>>
  *FECHA_INSCRIPCION : DATETIME
  *DVH : INT
}

entity "INSCRIPCION_DETALLE" as INSCRIPCION_DETALLE {
  *ID : INT <<PK, IDENTITY>>
  --
  *ID_INSCRIPCION : INT <<FK>>
  *ID_MATERIA : INT <<FK>>
  *DVH : INT
}

entity "DIGITO_VERIFICADOR_VERTICAL" as DVV {
  *TABLA : VARCHAR(50) <<PK>>
  *COLUMNA : VARCHAR(50) <<PK>>
  --
  *DVV : INT
}

entity "SNAPSHOT_INTEGRIDAD" as SNAPSHOT {
  *TABLA : VARCHAR(50) <<PK>>
  --
  *DATOS_JSON : NVARCHAR(MAX)
  *FECHA : DATETIME
}

note bottom of DVV
  Motor genérico de integridad: un registro
  por (TABLA, COLUMNA) de las 9 tablas de negocio
  (USUARIO, BITACORA, MATERIA, CORRELATIVA,
  ALUMNO_MATERIA, EVENTO_ACADEMICO,
  PERIODO_ACADEMICO, INSCRIPCION,
  INSCRIPCION_DETALLE). TABLA/COLUMNA son
  referencias lógicas (string), no FK físicas.
end note

note bottom of SNAPSHOT
  Un registro por tabla con el último
  estado válido conocido (JSON), usado
  para diagnóstico y restauración.
  TABLA es referencia lógica, no FK física.
end note

' ============================================================
' RELACIONES
' ============================================================

USUARIO         ||--o{    ALUMNO_MATERIA      : "cursa"
MATERIA         ||--o{    ALUMNO_MATERIA      : "es cursada por"

USUARIO         ||--o{    EVENTO_ACADEMICO    : "genera"
MATERIA         ||--o{    EVENTO_ACADEMICO    : "pertenece a"

MATERIA         ||--o{    CORRELATIVA         : "ID_MATERIA >"
MATERIA         ||--o{    CORRELATIVA         : "< ID_CORRELATIVA"

USUARIO         ||--o{    INSCRIPCION         : "realiza"
PERIODO_ACADEMICO ||--o{  INSCRIPCION         : "agrupa"

INSCRIPCION     ||--o{    INSCRIPCION_DETALLE : "contiene"
MATERIA         ||--o{    INSCRIPCION_DETALLE : "aparece en"

' ============================================================
' FLECHAS OCULTAS — controlan posición de tablas
' ============================================================
' Columna izquierda: USUARIO, BITACORA
USUARIO    -[hidden]down-> BITACORA

' USUARIO a la izquierda de MATERIA
USUARIO    -[hidden]right-> MATERIA

' Columna central: MATERIA, ALUMNO_MATERIA, CORRELATIVA
MATERIA         -[hidden]down-> ALUMNO_MATERIA
ALUMNO_MATERIA  -[hidden]down-> CORRELATIVA

' Columna derecha: EVENTO_ACADEMICO, INSCRIPCION, INSCRIPCION_DETALLE, PERIODO_ACADEMICO
MATERIA              -[hidden]right-> EVENTO_ACADEMICO
EVENTO_ACADEMICO     -[hidden]down-> INSCRIPCION
INSCRIPCION          -[hidden]down-> INSCRIPCION_DETALLE
INSCRIPCION_DETALLE  -[hidden]down-> PERIODO_ACADEMICO

' Columna de tablas genericas de integridad, debajo de BITACORA
BITACORA   -[hidden]down-> DVV
DVV        -[hidden]down-> SNAPSHOT

@enduml
